// Constants for duplicate string literals to avoid SonarQube issues